--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://52.221.226.42:9000</sonar.host.url>
+		<sonar.host.url>http://172.31.32.171:9000/</sonar.host.url>
 		<sonar.login>squ_5ae124c846a911cd1cbbf394f05b91c2de9a24eb</sonar.login>
 		
 	        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.212.163.166:9980/mithuntechnologies/repository/walmart-release/</url>
+	      <url>http://172.31.2.23:9980/mithuntechnologies/repository/walmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.212.163.166:9980/mithuntechnologies/repository/walmart-snapshot/</url>
+	      <url>http://172.31.2.23:9980/mithuntechnologies/repository/walmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
